added the footer links and such

--- a/index.html
+++ b/index.html
@@ -193,5 +193,121 @@
             </div>
           </div>
       </div>
+      
+    <section class="container3">
+        <h2>Enough with the Jargon</h2>
+        <article class="article1">
+          <img src="./assets/images/jargon_1.png" alt="" />
+          <div>
+            <h3>8 Health Insurance Terms You Should Know</h3>
+          <p>
+            Panda Ipsum panda is one of pandas, the forest. Panda Ipsum panda is believed that ovulation period, they are only ovulate once each year. During that pandas only living species of the genus Ailurus and the genus Ailurus and the genus Ailurus and the population has dwindled. The red panda bear giant black-and-white panda ipsum eating bamboo in the giant panda loves being cool ipsum eating bamboo leaves. Red panda cute panda. Board panda loves leaves.
+
+            Giant black-and-white panda cute tiny dancing bear. It is cute tiny dancing panda. Panda Ipsum the reasons why the population has dwindled. The panda dancing panda. Panda Ipsum panda bear giant black-and-white panda and the Red panda and eat bamboo leaves. Red Panda. Female pandas only fertile for two or three days. That is cute panda. Panda Ipsum the Red panda red panda is one of pandas, the forest. Cute panda and the earth as the red panda likes great panda likes great panda ipsum all about pandas. The panda bear giant panda bear giant panda bear. Giant panda dances. For red panda dances. Ipsum the earth as early as early as the giant panda and the forest. Cute panda dances. Has panda and the population.
+          </p>
+          </div>
+        </article>
+        <div class="article2">
+          <article>
+            <img
+              src="./assets/images/jargon_2.png" alt=""/>
+            <h3>
+              Buying your own health insurance? Here's your 2023 Open Enrollment
+              checklist.
+            </h3>
+          </article>
+          <article>
+            <img src="./assets/images/jargon_3.png" alt="" />
+            <h3>
+              How to navigate health insurance options in the face of financial
+              challenges during the COVID-19 pandemic.
+            </h3>
+          </article>
+          <article>
+            <img
+              src="./assets/images/jargon_4.png" alt=""/>
+            <h3>
+              Health Insurance 101: Here's everthing you need to know about
+              picking a plan.
+            </h3>
+          </article>
+        </div>
+        <aside>
+          <p>
+            Attention: Panda Ipsum panda is one of pandas, the forest. Panda Ipsum panda is believed that ovulation period, they are only ovulate once each year. During that pandas only living species of the genus Ailurus and the genus Ailurus and the genus Ailurus and the population has dwindled. The red panda bear giant black-and-white panda ipsum eating bamboo in the giant panda loves being cool ipsum eating bamboo leaves. Red panda cute panda. Board panda loves leaves.
+            Giant black-and-white panda cute tiny dancing bear. It is cute tiny dancing panda. Panda Ipsum the reasons why the population has dwindled. The panda dancing panda. Panda Ipsum panda bear giant black-and-white panda and the Red panda and eat bamboo leaves. Red Panda. Female pandas only fertile for two or three days. That is cute panda. Panda Ipsum the Red panda red panda is one of pandas, the forest. Cute panda and the earth as the red panda likes great panda likes great panda ipsum all about pandas. The panda bear giant panda bear giant panda bear. Giant panda dances. For red panda dances. Ipsum the earth as early as early as the giant panda and the forest. Cute panda dances. Has panda and the population.
+          </p>
+          <p>More blah blah blah to enroll:</p>
+          <ol>
+            <li>Enrollment rule 1</li>
+            <li>Enrollment rule 2</li>
+          </ol>
+        </aside>
+      </section>
+      <section class="email">
+        <img src="./assets/images/newsletter_signup.png" alt="" />
+      </section>
+  
+      <footer>
+        <section class="socials">social links</section>
+        <section class="contact">
+          <h5>Questions about our plans?</h5>
+          <h6>Call us Monday-Friday 9am-8pm EDT</h6>
+          <h6>For individual &amp; Family plans, 1-888-555-5555</h6>
+          <h6>For Medicare plans, 1-888-555-6666</h6>
+          <h6>For Small Groups, 1-888-555-7777</h6>
+          <h6>TTY: 8088</h6>
+        </section>
+        <section class="bottom-nav">
+          <ul>
+            <li>Shop Plans</li>
+            <li><a href="">Medicare Advantage</a></li>
+            <li><a href="">Individuals &amp; Families</a></li>
+            <li><a href="">Businesses</a></li>
+          </ul>
+          <ul>
+            <li>Our Experience</li>
+            <li><a href="">Oscar App</a></li>
+            <li><a href="">Your Care Team</a></li>
+            <li><a href="">Virtual Urgent Care</a></li>
+          </ul>
+          <ul>
+            <li>About Us</li>
+            <li><a href="">Our Story</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Blog</a></li>
+          </ul>
+          <ul>
+            <li>Brokers</li>
+            <li><a href="">Partner with Us</a></li>
+            <li><a href="">Broker Experience</a></li>
+            <li><a href="">FAQ</a></li>
+          </ul>
+          <ul>
+            <li>Providers</li>
+            <li><a href="">Partner with Us</a></li>
+            <li><a href="">Provider Experience</a></li>
+            <li><a href="">Provider Center</a></li>
+            <li><a href="">FAQ</a></li>
+          </ul>
+          <ul>
+            <li>Resources</li>
+            <li><a href="">Search Doctors &amp; Drugs</a></li>
+            <li><a href="">Medicare Forms</a></li>
+            <li><a href="">Member Forms</a></li>
+            <li><a href="">Clinical Guidelines</a></li>
+            <li><a href="">Preventative Care</a></li>
+            <li><a href="">Grievance Form</a></li>
+          </ul>
+        </section>
+        <section class="disclaimers">
+          <h6>Medicare Disclaimers</h6>
+          <p>
+            Panda Ipsum panda is one of pandas, the forest. Panda Ipsum panda is believed that ovulation period, they are only ovulate once each year. During that pandas only living species of the genus Ailurus and the genus Ailurus and the genus Ailurus and the population has dwindled. The red panda bear giant black-and-white panda ipsum eating bamboo in the giant panda loves being cool ipsum eating bamboo leaves. Red panda cute panda. Board panda loves leaves.
+            Giant black-and-white panda cute tiny dancing bear. It is cute tiny dancing panda. Panda Ipsum the reasons why the population has dwindled. The panda dancing panda. Panda Ipsum panda bear giant black-and-white panda and the Red panda and eat bamboo leaves. Red Panda. Female pandas only fertile for two or three days. That is cute panda. Panda Ipsum the Red panda red panda is one of pandas, the forest. Cute panda and the earth as the red panda likes great panda likes great panda ipsum all about pandas. The panda bear giant panda bear giant panda bear. Giant panda dances. For red panda dances. Ipsum the earth as early as early as the giant panda and the forest. Cute panda dances. Has panda and the population.
+          </p>
+        </section>
+      </footer>
 </body>
 </html>
